--- a/15688 Final Report.ipynb
+++ b/15688 Final Report.ipynb
@@ -20,11 +20,7 @@
    "source": [
     "There are a lot of celebrities using Twitter, who are followed by tens of millions of general users. Whether a specific user will follow a particular celebrity is an interesting question to ask.\n",
     "\n",
-    "In this project, the team aims at answering the question of whether a looks into predicting whether a given user is following Barack Obama (@BarackObama). Three different learning models are tried, Bag-of-words model, Word2Vector, as well as collaborative filtering. In this report, we will talk about how we gathered data for each model and how well each model performs.\n",
-    "\n",
-    "\n",
-    "future use?\n",
-    "result could be used to automatically generate recommended celebrities for users. Furthermore, we are interested how to extend the model to also predict the likelihood of a user following another ordinary user."
+    "In this project, the team aims at answering the question of whether a looks into predicting whether a given user is following Barack Obama (@BarackObama). Two different learning models are tried: Collaborative Filtering and Bag-of-words model. Collaborative Filtering did not work quite well in our case, but after switching gear, bag-of-words seems to work much better.\n"
    ]
   },
   {
@@ -66,7 +62,324 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Bag-of-words model"
+    "## 3. Collaborative Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The team found that the behavior of a user following another user is in some way similar to how movie ratings happen for MovieLens dataset. The difference is that, instead of a floating number from 1 to 5 for a rating, the unidirectional relationship of follow/not follow only has a binary value. It would be interesting to observe how this property would affect the performance of alternating least squares method when it’s applied. And as a possible way to close the gap between the two scenarios, a “fondness” score could be added for a follower to one of the target he or she is following, indicating how much of a fan the follower is to the target. For example, if a user has retweeted or liked a lot of posts of the target, the fondness score might then be relatively high."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Collecting Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First,the team chose 100 popular twitter accounts based on Twitter statistics and used BeautifulSoup to get a list these 100 accounts’ screen_names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import urllib2\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "web = \"http://twittercounter.com/pages/100?vt=1&utm_expid=102679131-111.l9w6V73qSUykZciySuTZuA.1&utm_referrer=https%3A%2F%2Fwww.google.com%2F\"\n",
+    "\n",
+    "page = urllib2.urlopen(web)\n",
+    "soup = BeautifulSoup(page)\n",
+    "span_list = soup.find_all(\"span\", {\"itemprop\":\"alternateName\"})\n",
+    "# list of screen name of top 100 Twitter celebrity\n",
+    "celebrities = [] \n",
+    "for each in span_list:\n",
+    "    celebrities.append(str(each.text)[1:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, we hope to get 1 follower from each celebrity's follower group, by simply selecting the most recent follower."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def retrieve_n_recent_follower_ids(id, n):\n",
+    "    \"\"\" Retrieve the most recent n followers from a given Twitter id or screen name. \"\"\"\n",
+    "    \n",
+    "    followers = []\n",
+    "    for i, follower_list in enumerate(tweepy.Cursor(api.followers_ids, id).pages()):\n",
+    "        if len(followers) >= n:\n",
+    "            break\n",
+    "        followers.append(follower_list)\n",
+    "    return followers\n",
+    "\n",
+    "\n",
+    "def generate_user_id_list (id_list,n):\n",
+    "    \"\"\" Generate the entire set of users that unions the returned list of running the retrieve_n_follower_ids \n",
+    "    for each celebrity account\"\"\"\n",
+    "    \n",
+    "    users = []\n",
+    "    for id in id_list:\n",
+    "        try:\n",
+    "            new_users = retrieve_n_follower_ids(id, n)\n",
+    "        except tweepy.TweepError:\n",
+    "            time.sleep(60*15)\n",
+    "            new_users = retrieve_n_follower_ids(id, n)\n",
+    "        users += new_users\n",
+    "        \n",
+    "    return set(users)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "users = generate_user_id_list (celebrities, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Generate User-celebrity matrix\n",
+    "\n",
+    "Now that both user and celebrity arrays are ready, the following step is to generate the m by n matrix (m is number of total general users and n the number of celebrities collected). matrix[i][j] indicates whether user i is currently following celebrity j. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def genenerate_user_celebrity_matrix(users, celebrities): # both are lists of Twitter IDs\n",
+    "    matrix = np.zeros((len(users), len(celebrities)))\n",
+    "    celebrity_set = set(celebrities)\n",
+    "    for i in range(len(users)):\n",
+    "        try:\n",
+    "            friends = get_friends(users[i]) \n",
+    "        except tweepy.TweepError:\n",
+    "            time.sleep(60*15)\n",
+    "            friends = get_friends(users[i])    \n",
+    "        for j in range(len(celebrities)):\n",
+    "            matrix[i][j] = celebrities[j] in friends\n",
+    "    return matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "matrix = genenerate_user_celebrity_matrix(users, celebrities)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.3 Training and Predicting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def process(following, P):\n",
+    "    \"\"\" Given a dataframe of following and a random permutation, split the data into a training \n",
+    "        and a testing set, in matrix form. \n",
+    "        \n",
+    "        Args: \n",
+    "            following (2D numpy array) : a 2D numpy array of following \n",
+    "            P (numpy 1D array) : random permutation vector\n",
+    "            \n",
+    "        Returns: \n",
+    "            (X_tr, X_te)  : training and testing splits of the following matrix (both \n",
+    "                                         numpy 2D arrays) \n",
+    "    \"\"\"\n",
+    "    l= len(following)   \n",
+    "    train_length = int(math.floor(l*0.9))\n",
+    "    train_P = P[0:train_length]\n",
+    "    test_P = P[train_length:]\n",
+    "    \n",
+    "    new_p1 = np.zeros(following.shape[1])\n",
+    "    new_p2= np.zeros(following.shape[1])\n",
+    "    for each in train_P:\n",
+    "        new_p1[each] = 1\n",
+    "    for each in test_P:\n",
+    "        new_p2[each] = 1\n",
+    "    #training matrix\n",
+    "    training_list = []\n",
+    "    for i,xi in enumerate(following):\n",
+    "        x = (xi*new_p1).tolist()\n",
+    "        training_list.append(x)\n",
+    "    \n",
+    "    \n",
+    "    #testing matrix\n",
+    "    testing_list = []\n",
+    "    for i,xi in enumerate(following):\n",
+    "        x = (xi*new_p2).tolist()\n",
+    "        test_list.append(x)\n",
+    "        \n",
+    "    return np.array(training_list),np.array(testing_list)\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "X_tr, X_te = process(new_matrix, np.random.permutation(new_matrix.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def error(X, U, V):\n",
+    "    \"\"\" Compute the mean error of the observed ratings in X and their estimated values. \n",
+    "        Args: \n",
+    "            X (numpy 2D array) : a ratings matrix as specified above\n",
+    "            U (numpy 2D array) : a matrix of features for each user\n",
+    "            V (numpy 2D array) : a matrix of features for each movie\n",
+    "        Returns: \n",
+    "            (float) : the mean squared error of the observed ratings with their estimated values\n",
+    "        \"\"\"\n",
+    "    dif =np.square(X- U.dot(V.T)) \n",
+    "    new_dif =[X!=0]*dif\n",
+    "    return np.mean(new_dif)\n",
+    "    pass\n",
+    "\n",
+    "def train(X, X_te, k, U, V, niters=51, lam=10, verbose=False):\n",
+    "    \"\"\" Train a collaborative filtering model. \n",
+    "        Args: \n",
+    "            X (numpy 2D array) : the training ratings matrix as specified above\n",
+    "            X_te (numpy 2D array) : the testing ratings matrix as specified above\n",
+    "            k (int) : the number of features use in the CF model\n",
+    "            U (numpy 2D array) : an initial matrix of features for each user\n",
+    "            V (numpy 2D array) : an initial matrix of features for each movie\n",
+    "            niters (int) : number of iterations to run\n",
+    "            lam (float) : regularization parameter\n",
+    "            verbose (boolean) : verbosity flag for printing useful messages\n",
+    "            \n",
+    "        Returns:\n",
+    "            (U,V) : A pair of the resulting learned matrix factorization\n",
+    "    \"\"\"\n",
+    "    temp = X !=0\n",
+    "    W = temp.astype(np.int)\n",
+    "    for ite in range(niters):\n",
+    "        for j,w in enumerate(W): \n",
+    "            U[j]=np.linalg.solve(V.T.dot((V.T.dot(np.diag(w))).T) + lam * np.eye(k), V.T.dot(X[j]))\n",
+    "        for j,wt in enumerate(W.T):\n",
+    "            V[j] = np.linalg.solve(U.T.dot(np.diag(wt).dot(U))+lam *np.eye(k),U.T.dot(X[:,j]))\n",
+    "        if verbose == True:\n",
+    "            if ite== 0:\n",
+    "                print \"Iter |Train Err |Test Err\"\n",
+    "            train_error= error(X, U, V)\n",
+    "            test_error = error(X_te, U, V)\n",
+    "            print ite, \"|\",train_error,\"|\",test_error\n",
+    "            \n",
+    "    return U,V\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "U = np.random.rand(X_tr.shape[0],10)\n",
+    "V = np.random.rand(X_tr.shape[1],10)\n",
+    "U,V = train(X_tr, X_te, 10, U, V, niters=10, lam=3, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The team got the following output: \n",
+    "```python\n",
+    "\n",
+    "Iter |Train Err |Test Err\n",
+    "0 | 0.0215557892728 | 0.0247727272727\n",
+    "1 | 0.0124878550122 | 0.0247727272727\n",
+    "2 | 0.011533655087 | 0.0247727272727\n",
+    "3 | 0.0113421192911 | 0.0247727272727\n",
+    "4 | 0.0112910212752 | 0.0247727272727\n",
+    "5 | 0.011275019604 | 0.0247727272727\n",
+    "6 | 0.0112696053164 | 0.0247727272727\n",
+    "7 | 0.0112677039911 | 0.0247727272727\n",
+    "8 | 0.0112670189888 | 0.0247727272727\n",
+    "9 | 0.0112667645063 | 0.0247727272727\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.4 Observations and Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see from the result, the training errors decrease as the algorithm iterates, and is always smaller than the testing error. However, the testing error doesn’t seem to change at all, which might imply that our training data is not enough, or that using CF to extract hidden features might not be such a great idea."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Bag-of-words model"
    ]
   },
   {
@@ -80,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Collecting data"
+    "### 4.1 Collecting data"
    ]
   },
   {
@@ -100,27 +413,8 @@
    },
    "outputs": [],
    "source": [
-    "def retrieve_n_recent_follower_ids(id, n):\n",
-    "    \"\"\" Retrieve the most recent n followers from a given Twitter id or screen name. \"\"\"\n",
-    "    \n",
-    "    followers = []\n",
-    "    for i, follower_list in enumerate(tweepy.Cursor(api.followers_ids, id).pages()):\n",
-    "        if len(followers) >= n:\n",
-    "            break\n",
-    "        followers.append(follower_list)\n",
-    "    return followers\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "# Get most recent 2000 followers of Obama\n",
-    "followers = api.followers(\"BarackObama\")[:2000]"
+    "followers = api.followers_ids(\"BarackObama\")[:2000]"
    ]
   },
   {
@@ -263,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 Processing tweet data"
+    "### 4.2 Processing tweet data"
    ]
   },
   {
@@ -294,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 Learning and predicting"
+    "### 4.3 Learning and predicting"
    ]
   },
   {
@@ -319,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4 Observations and Analysis"
+    "### 4.4 Observations and Analysis"
    ]
   },
   {
@@ -398,9 +692,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## 5. Collaborative Filtering"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
