added code for tweet processing

--- a/15688 Final Report.ipynb
+++ b/15688 Final Report.ipynb
@@ -570,7 +570,8 @@
     "2. remove punctuations\n",
     "3. remove non ascii characters\n",
     "4. remove tweets that are not written in English\n",
-    "5. remove non words, such as \"ab123\"\n"
+    "5. remove non words, such as \"ab123\"\n",
+    "6. remove words with length equals 1"
    ]
   },
   {
@@ -581,7 +582,78 @@
    },
    "outputs": [],
    "source": [
-    "# code for data pre-processing"
+    "import rake\n",
+    "import operator\n",
+    "import stop_words\n",
+    "import gensim\n",
+    "import glob\n",
+    "import enchant\n",
+    "import random\n",
+    "import collections\n",
+    "from guess_language import guessLanguage\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "from stop_words import get_stop_words\n",
+    "\n",
+    "def remove_non_ascii(text):\n",
+    "    return ''.join([i if ord(i) < 128 else '' for i in text])\n",
+    "\n",
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "en_stop = get_stop_words('en') # create English stop words list\n",
+    "d = enchant.Dict(\"en_US\")\n",
+    "input_files = glob.glob('obama_non_followers_tweets/*.txt')\n",
+    "custom_stop_words = [\"just\", \"like\", \"can\", \"video\", \"new\", \"love\", \"via\", \"will\", \"one\", \"now\",\n",
+    "                     \"know\", \"see\", \"get\", \"don\", \"today\", \"people\", \"day\", \"time\", \"make\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def process_all(fnames, label):\n",
+    "    for cnt, fname in enumerate(fnames):\n",
+    "        sample_file = open(fname, 'r')\n",
+    "        text = sample_file.read()\n",
+    "\n",
+    "        # tokenize\n",
+    "        raw = text.lower()\n",
+    "        tokens = tokenizer.tokenize(raw)\n",
+    "\n",
+    "        # remove non ascii str\n",
+    "        tokens = map(remove_non_ascii, tokens)\n",
+    "        tokens = filter(bool, tokens)\n",
+    "        tokens = filter(lambda x: len(x) > 2, tokens)\n",
+    "\n",
+    "        # remove stop words\n",
+    "        stopped_tokens = [i for i in tokens if not i in en_stop]\n",
+    "        stopped_tokens = [i for i in stopped_tokens if not i in custom_stop_words]\n",
+    "\n",
+    "        texts = [i for i in stopped_tokens]\n",
+    "        processed_texts = str(' '.join(texts))\n",
+    "\n",
+    "        if str(guessLanguage(processed_texts)) != 'en':\n",
+    "            continue\n",
+    "\n",
+    "        # remove non english words\n",
+    "        processed_texts_en = []\n",
+    "        for tok in processed_texts.split():\n",
+    "            if d.check(tok):\n",
+    "                processed_texts_en.append(tok)\n",
+    "        processed_texts_en = ' '.join(processed_texts_en)\n",
+    "\n",
+    "        if len(processed_texts_en.split()) < 100:\n",
+    "            continue\n",
+    "        tag = label\n",
+    "        content = str(cnt) + '\\t' + tag + '\\t' + processed_texts_en + '\\n'\n",
+    "        \n",
+    "        filename = \"OBAMA_\" + label + \".txt\"\n",
+    "        with open(filename, \"a\") as myfile:\n",
+    "            myfile.write(content)\n",
+    "\n",
+    "        if cnt % 100 == 0:\n",
+    "            print str(cnt) + \" round completed....\"\n",
+    "\n",
+    "\n",
+    "            \n",
+    "input_files = glob.glob('obama_non_followers_tweets/*.txt')\n",
+    "process_all(input_files, 'FALSE')\n"
    ]
   },
   {
