--- a/15688 Final Report.ipynb
+++ b/15688 Final Report.ipynb
@@ -462,7 +462,7 @@
     "\n",
     "for follower in followers:\n",
     "    screen_name = api.get_user(follower).screen_name\n",
-    "    tweet_saved.append(get_tweets(follower, \"follower_tweets\"))\n",
+    "    tweet_saved.append(get_tweets(follower, \"obama_followers_tweets\"))\n",
     "\n",
     "print len(tweet_saved == True) # print count of valid followers"
    ]
@@ -548,7 +548,7 @@
     "for i, candidate in enumerate(candidates):\n",
     "    screen_name = api.get_user(candidate).screen_name\n",
     "    if (is_obama_follower[i] == 0):\n",
-    "        tweet_saved.append(get_tweets(screen_name, \"non_follower_tweets\"))\n",
+    "        tweet_saved.append(get_tweets(screen_name, \"obama_non_followers_tweets\"))\n",
     "        \n",
     "print len(tweet_saved == 1) # should print count of valid non-followers"
    ]
@@ -605,8 +605,6 @@
     "                     \"know\", \"see\", \"get\", \"don\", \"today\", \"people\", \"day\", \"time\", \"make\"]\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "def process_all(fnames, label):\n",
     "    for cnt, fname in enumerate(fnames):\n",
     "        sample_file = open(fname, 'r')\n",
@@ -653,7 +651,9 @@
     "\n",
     "            \n",
     "input_files = glob.glob('obama_non_followers_tweets/*.txt')\n",
-    "process_all(input_files, 'FALSE')\n"
+    "process_all(input_files, 'FALSE')\n",
+    "input_files = glob.glob('obama_followers_tweets/*.txt')\n",
+    "process_all(input_files, 'TRUE')"
    ]
   },
   {
@@ -667,18 +667,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We merged the preprocessed tweets into two big corpus, the follower tweets and the non-follower tweets. We used Naive Bayes and maximum likelihood estimation for the classifier, where we calculated the frequency for each word in both corpus, with Laplace smoothing(?). During the testing phase, when given the collective tweets of a user, we calculate the probability of following and not following, and classify the user based on the one more likely. Our results achieve an average precision of 67%."
+    "We merged the preprocessed tweets into two big corpus, the follower tweets and the non-follower tweets. We used Naive Bayes and Maxiumn a Posteriori Probability (MAP) for the classifier, where we calculated the frequency for each word in both corpus, with Laplace smoothing. During the testing phase, when given the collective tweets of a user, we calculate the probability of following and not following, and classify the user based on the one more likely. \n",
+    "\n",
+    "**Because part of the code we used for this section is from one of the team member's homework for another class, we will not post the code here, but submit it through Autolab instead. **\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# code goes here"
+    "We carefully selected training and test set such that both set have about the same size. We varied the size of training and test dataset to see how the model perform on different sizes. For each different size, we ran the model three times with randomly selected training and test set from our pool, and the results are as follows:\n",
+    "\n",
+    "```\n",
+    "collective tweets from obama-followers train|test|#collective tweets from non-obama-followers train|test \n",
+    "--> (run_1_result, run_2_result, run_3_result) \n",
+    "\n",
+    "253 50 295 50 --> (0.77, 0.84, 0.77)\n",
+    "200 50 250 50 --> (0.74, 0.72, 0.74)\n",
+    "150 50 200 50 --> (0.72, 0.72, 0.70)\n",
+    "100 50 150 50 --> (0.72, 0.67, 0.71)\n",
+    "50 50 100 50 --> (0.77, 0.74, 0.71)\n",
+    "50 50 50 50 --> (0.56, 0.63, 0.67)\n",
+    "25 50 25 50 --> (0.68, 0.57, 0.67)\n",
+    "10 50 10 50 --> (0.58, 0.61, 0.61)\n",
+    "```\n",
+    "\n",
+    "As we could see, the average prediction accuracy increased as we used more training data. \n",
+    "\n"
    ]
   },
   {
@@ -694,14 +711,19 @@
    "source": [
     "We had some interesting observations after further analyzing both the result and the data. We also tried to modify our model in a couple of ways to see whether its performance would improve. \n",
     "\n",
-    "a ) We started with the default nltk stop word set, but later when we inspected the most frequent words from the two corpus, we found that there were still a lot of overlapping between the two lists of top words, which did not necessarily seem relevant to whether the user would actually follow Barack Obama. For exmplae, those words include ...Since the idea for \"bag-of-words\" text classification was that the corpus under each class label should have rather \"characteristic\" words, meaning that they should be specific to that label, we decided to add those words to the stop word set. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "b) The prediction accuracy does not necessarily increase as we used more training data. Unlike most cases in machine learning where more training data usually gives better test result under the same model, our model had this rather uncommon behavior. We suspected that this was caused by the fact that a user's tweets sometimes might not accurately reflect the friendship status between the user and Obama. To use a more straightforward example, if a user does not talk about politics on Twitter, that does not necessarily suggest that the user would not follow Obama, and vice versa. In those cases, the tweets can only get the model more confused by adding irrelevant words to the corpus, while not actually helping the prediction.\n"
+    "a ) We started with the default nltk stop word set, but later when we inspected the most frequent words from the two corpus, we found that there were still a lot of overlapping between the two lists of top words, which did not necessarily seem relevant to whether the user would actually follow Barack Obama. Since the idea for \"bag-of-words\" text classification was that the corpus under each class label should have rather \"characteristic\" words, meaning that they should be specific to that label, we decided to add those words to the stop word set. \n",
+    "\n",
+    "\n",
+    "Some of the results of comparing the model with and without customized stop words:\n",
+    "```\n",
+    "200 50 250 50 \n",
+    "--> (0.74, 0.72, 0.74) with customized stopwords\n",
+    "--> (0.61, 0.51, 0.61) without customized stopwords\n",
+    "\n",
+    "253 50 295 50 \n",
+    "--> (0.77, 0.84, 0.77) with customized stopwords \n",
+    "--> (0.62, 0.52, 0.61) without customized stopwords\n",
+    "```"
    ]
   },
   {
@@ -709,14 +731,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "c) The accuracy seems to have a lot to do with the training set we chose to use. When using a different subset of all training data we got as the training set while keeping the test set the same, the results might vary a bit (by %15 the most). Our explanation is that, it again has to do with some of the tweets being unhelpful(or even harmful) to predicting the friendship. When the subset contains tweets that have stronger relevance to the classification (say, when contains a lot of keywords from the field of politics), the model may tend to perform better on test data.\n"
+    "b) The accuracy seems to have something to do with the training set we chose to use. When using a different subset of all training data we got as the training set while keeping the test set the same, the results might vary a bit (by around 10%). We suspected that this was caused by the fact that a user's tweets sometimes might not accurately reflect the friendship status between the user and Obama. To use a more straightforward example, if a user does not talk about politics on Twitter, that does not necessarily suggest that the user would not follow Obama, and vice versa. In those cases, the tweets can only get the model more confused by adding irrelevant words to the corpus, while not actually helping the prediction. When the subset contains tweets that have stronger relevance to the classification (say, when contains a lot of keywords from the field of politics), the model may tend to perform better on test data.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We realized that we could've possibly chosen another Twitter celebrity for this project such that the model would generally have better performance. If we had used Katy Perry, for instance, there's reason to believe that Twitter followers of Katy Perry will probably tweet more about music comparing to Twitter followers of Obama tweet about politics.\n",
+    "We realized that we could've possibly chosen another Twitter celebrity for this project such that the model would probably have better performance. If we had used Katy Perry, for instance, it's reasonable to believe that Twitter followers of Katy Perry will probably tweet more about music comparing to Twitter followers of Obama tweet about politics.\n",
     "\n",
     "Some other features we think might be helpful, if we had more time to work on this model, would be \n",
     "1. How many of my followers have followed Obama, and\n",
